// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renderer:Collapse 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__CollapseGroup"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
        >
          <icon-mock
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
        >
          <icon-mock
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题2
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
        >
          <icon-mock
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper in"
        style="height: 0px;"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. Renderer:Collapse with expandIcon & expandIconPosition & showArrow 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__CollapseGroup icon-position-right"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <i
          class="caret-right __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-icon-tranform __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-icon-tranform fa fa-caret-right"
        />
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <i
          class="caret-right __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-icon-tranform __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-icon-tranform fa fa-caret-right"
        />
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题2
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper out"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper out"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. Renderer:Collapse with disabled & panel nesting 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__CollapseGroup"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
        >
          <icon-mock
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__CollapseGroup"
              data-role="container"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
                  >
                    <icon-mock
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
                      icon="right-arrow-bold"
                    />
                  </span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      嵌套面板标题
                    </span>
                  </span>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          嵌套面板内容
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse--disabled lastOne"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
        >
          <icon-mock
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
            icon="right-arrow-bold"
          />
        </span>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper out"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
